feat: allow empty poll subjects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Urn</string>
+    <string name="label_poll_subject">Sujet du Scrutin</string>
+    <string name="label_poll_proposals">Propositions</string>
 </resources>
