refacto: use some lambdas instead of duplication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="button_next">next</string>
     <string name="label_poll_subject">Subject of the Poll</string>
     <string name="button_let_s_go">Let\'s go !</string>
+    <string name="proposal">Proposal</string>
+    <string name="button_add">Add</string>
 </resources>
