--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,4 +7,7 @@
     <string name="label_poll_proposals">Candidats</string>
     <string name="majority_judgment">Jugement Majoritaire</string>
     <string name="button_let_s_go">C\'est parti !</string>
+    <string name="proposal">Candidat</string>
+    <string name="button_add">Ajouter</string>
+    <string name="poll_of">Scrutin du</string>
 </resources>
