--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="button_let_s_go">Let\'s go !</string>
     <string name="proposal">Proposal</string>
     <string name="button_add">Add</string>
+    <string name="poll_of">Poll of</string>
 </resources>
