feat: Add BottomBar composable & add some trad

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,4 +17,6 @@
     <string name="grade_good">bien</string>
     <string name="grade_very_good">très bien</string>
     <string name="grade_excellent">excellent</string>
+    <string name="bottombar_home">Accueil</string>
+    <string name="bottombar_settings">Paramètres</string>
 </resources>
