feat: use Int for grades
Trust me, it's better this way.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="grade_good">good</string>
     <string name="grade_very_good">very good</string>
     <string name="grade_excellent">excellent</string>
+    <string name="caca">caca</string>
 </resources>
