--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,19 @@
 <resources>
     <string name="app_name">Urn</string>
-    <string name="label_poll_proposals">Proposals</string>
     <string name="majority_judgment">Majority Judgment</string>
+    <string name="label_poll_subject">Subject of the Poll</string>
+    <string name="label_poll_proposals">Proposals</string>
+    <string name="button_add">Add</string>
     <string name="button_finish">finish</string>
     <string name="button_next">next</string>
-    <string name="label_poll_subject">Subject of the Poll</string>
     <string name="button_let_s_go">Let\'s go !</string>
     <string name="proposal">Proposal</string>
-    <string name="button_add">Add</string>
     <string name="poll_of">Poll of</string>
-    <string name="grade_to_reject">à rejeter</string>
+    <string name="grade_to_reject">to reject</string>
     <string name="grade_insufficient">insufficient</string>
     <string name="grade_passable">passable</string>
     <string name="grade_somewhat_good">somewhat good</string>
     <string name="grade_good">good</string>
     <string name="grade_very_good">very good</string>
     <string name="grade_excellent">excellent</string>
-    <string name="caca">caca</string>
 </resources>
