--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="grade_excellent">excellent</string>
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
+    <string name="button_next_participant">Next participant</string>
+    <string name="button_end_the_poll">End the Poll</string>
 </resources>
