--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="grade_excellent">excellent</string>
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
     <string name="button_next_participant">Next participant</string>
     <string name="button_end_the_poll">End the Poll</string>
     <string name="all_things_considered_i_think">All things considered, I think</string>
