--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -22,6 +22,7 @@
     <string name="ballots">bulletins</string>
     <string name="in_the_urn">dans l\'urne</string>
     <string name="ballot">bulletin</string>
+    <string name="menu_about">À Propos</string>
     <string name="button_next_participant">Prochain⋅e participant⋅e</string>
     <string name="button_end_the_poll">Terminer le Scrutin</string>
     <string name="all_things_considered_i_think">Ayant pris en compte les divers éléments, je pense que</string>
