--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="seven_grading">Seven grading list</string>
     <string name="five_grading">Five grading list</string>
     <string name="three_grading">Three grading list</string>
-    <string name="show_on_boarding">Show on boarding</string>
+    <string name="show_on_boarding">Show onboarding again</string>
     <string name="settings_screen_title">Settings</string>
 </resources>
