--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -29,4 +29,9 @@
     <string name="verb_is">est</string>
     <string name="toast_proposal_name_already_exists">Une autre proposition existe déjà avec ce nom.</string>
     <string name="button_report_bug">Rapport de Bogue</string>
+    <string name="seven_grading">Spt mentions</string>
+    <string name="five_grading">Cinq mentions</string>
+    <string name="three_grading">Trois mentions</string>
+    <string name="show_on_boarding">Montrer l\'intro de nouveau</string>
+    <string name="settings_screen_title">Options</string>
 </resources>
