--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,4 +51,7 @@
     <string name="button_browse_the_source">Voir la Source</string>
     <string name="about_help_us_make_it_better">Aidez-nous à le rendre meilleur !</string>
     <string name="about_this_app_is_libre_software">Ce logiciel est libre et gratuit.</string>
+    <string name="help_your_participation_was_a_success">Votre participation a bien été prise en compte.\nVous pouvez maintenant passer cet appareil au prochain participant.</string>
+    <string name="button_be_the_first_to_vote">Votez en premier</string>
+    <string name="label_grades">Mentions</string>
 </resources>
