--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,8 +39,7 @@
     <string name="button_new_poll">Nouveau Scrutin</string>
     <string name="onboarding_welcome_to_your_offline_poll_app">Bienvenue dans votre urne mobile au Jugement Majoritaire.</string>
     <string name="onboarding_setup_a_poll_and_share_the_phone">Organisez un scrutin, et faites tourner le téléphone aux participantes.</string>
-    <string name="onboarding_this_is_free_software">C\'est un logiciel libre, et vous pouvez le rendre meilleur.</string>
-    <string name="onboarding_ready">C\'est parti !</string>
+    <string name="onboarding_this_is_free_software">Dans la section À Propos, contactez-nous et/ou contribuez à l\'édition de ce logiciel libre.</string>
     <string name="votes">votes</string>
     <string name="vote">vote</string>
     <string name="action_delete">Supprimer</string>
