--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,7 @@
     <string name="button_new_poll">New Poll</string>
     <string name="onboarding_welcome_to_your_offline_poll_app">Welcome to your offline poll app using Majority Judgment.</string>
     <string name="onboarding_setup_a_poll_and_share_the_phone">Setup a poll and share the phone amongst participants.</string>
-    <string name="onboarding_this_is_free_software">This is free software, and you can help make it better.</string>
-    <string name="onboarding_ready">Ready ?</string>
+    <string name="onboarding_this_is_free_software">This is Libre Software, find out how to contact us or contribute in the About section.</string>
     <string name="votes">votes</string>
     <string name="vote">vote</string>
     <string name="action_delete">Delete</string>
