--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,6 +44,7 @@
     <string name="action_clone">Clonar</string>
     <string name="action_resume">Reanudar</string>
     <string name="action_inspect">Ver</string>
+    <string name="title_poll_setup">Encuesta</string>
     <string name="button_browse_the_source">Explorar la Fuente</string>
     <string name="about_help_us_make_it_better">¡Ayúdanos a hacerlo mejor!</string>
     <string name="about_this_app_is_libre_software">Esta aplicación es software libre.</string>
