chore: Add popup suggestion for proposals

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
     <string name="button_finish">terminer</string>
     <string name="button_next">suivant</string>
     <string name="label_poll_subject">Sujet du Scrutin</string>
-    <string name="label_poll_proposals">Candidats</string>
+    <string name="label_poll_proposals">Propositions</string>
     <string name="majority_judgment">Jugement Majoritaire</string>
     <string name="button_let_s_go">C\'est parti !</string>
     <string name="proposal">Candidat</string>
