--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -72,6 +72,8 @@
     <string name="ranking_explain_perfectly_equal">%1$s and %2$s are perfectly equal.</string>
     <string name="ranking_explain_different_median">%1$s est %2$s et donc %3$s que %4$s qui est %5$s.</string>
     <string name="ranking_explain_same_median">%1$s et %2$s sont %3$s, mais le groupe %4$s de %5$s est le plus gros.</string>
+    <string name="ranking_explain_different_sub_groups">Le groupe %1$s de %2$s revendique %3$s, qui est %4$s que le groupe %5$s de %6$s qui revendique %7$s.</string>
+    <string name="ranking_explain_double_majority">Double majorité !  Le groupe %1$s de %2$s est juste aussi gros que le groupe %3$s de %4$s.  Ensemble, ils indiquent que %5$s est %6$s que %7$s.</string>
     <string name="wip_stay_tuned">Travaux en cours.</string>
     <string name="adhesion">d\'adhésion</string>
     <string name="contestation">de contestation</string>
