--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="ranking_explain_same_median">%1$s and %2$s are both %3$s, but the %4$s group of %5$s is bigger.</string>
     <string name="ranking_explain_different_sub_groups">The %1$s group of %2$s says %3$s, which is %4$s than the %5$s group of %6$s saying %7$s.</string>
     <string name="ranking_explain_double_majority">Double majority !  The %1$s group of %2$s is just as big as the %3$s group of %4$s.  Both mean that %5$s should be %6$s than %7$s.</string>
+    <string name="ranking_explain_no_more_groups">The %1$s group of %2$s is the biggest, as %3$s has no more groups.</string>
     <string name="wip_stay_tuned">Work in Progress.\nStay tuned for updates via F-Droid.</string>
     <string name="adhesion">adhesion</string>
     <string name="contestation">contestation</string>
