--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,6 @@
     <string name="higher">higher</string>
     <string name="lower">lower</string>
     <string name="toast_you_cannot_go_back_from_here">You cannot go back from here, that would be cheating.</string>
+    <string name="settings_show_onboarding_buton">Show</string>
+    <string name="onboarding_skip">skip</string>
 </resources>
