--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,11 @@
     <string name="button_be_the_first_to_vote">Be the first to vote</string>
     <string name="label_grades">Grades</string>
     <string name="setting_show_onboarding">Show onboarding again</string>
+    <string name="setting_show_onboarding_button">Show</string>
     <string name="setting_play_sound">Play sounds</string>
+    <string name="setting_play_sound_label">Signal everyone that a ballot has been submitted</string>
     <string name="setting_pin_screen">Pin screen automatically</string>
+    <string name="setting_pin_screen_label">Prevent voters from leaving the app</string>
     <string name="summary_are_you_sure">Are you sure ?</string>
     <string name="summary_is_that_accurate">Is that accurate ?</string>
     <string name="summary_button_no_rescind">No, rescind</string>
@@ -83,6 +86,5 @@
     <string name="higher">higher</string>
     <string name="lower">lower</string>
     <string name="toast_you_cannot_go_back_from_here">You cannot go back from here, that would be cheating.</string>
-    <string name="settings_show_onboarding_buton">Show</string>
     <string name="onboarding_skip">skip</string>
 </resources>
