feat: show a Toast if the poll is not found

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="button_add">Add</string>
     <string name="button_finish">Finish</string>
     <string name="button_next">next</string>
+    <string name="onboarding_skip">skip</string>
     <string name="button_let_s_go">Let\'s go !</string>
     <string name="proposal">Proposal</string>
     <string name="poll_of">Poll of</string>
@@ -86,5 +87,5 @@
     <string name="higher">higher</string>
     <string name="lower">lower</string>
     <string name="toast_you_cannot_go_back_from_here">You cannot go back from here, that would be cheating.</string>
-    <string name="onboarding_skip">skip</string>
+    <string name="toast_that_poll_does_not_exist">That poll does not exist anymore.</string>
 </resources>
