--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -84,7 +84,7 @@
     <string name="ranking_explain_same_median">%1$s ve %2$s\'in her ikisi de %3$s ancak %5$s\'in %4$s grubu daha büyük ve bu nedenle alt sırada.</string>
     <string name="contestation">itiraz</string>
     <string name="setting_show_onboarding_button">Göster</string>
-    <string name="onboarding_skip">atla</string>
+    <string name="button_skip">atla</string>
     <string name="setting_pin_screen_label">Seçmenlerin uygulamadan çıkmasını engelle</string>
     <string name="setting_play_sound_label">Bir oy kullanıldığında herkese bildir</string>
 </resources>
